# ncp

./: .gitignore  README.md  flake-module.nix  flake.nix  pyproject.toml  setup.py
cli/: README.md
cli/ncp/: __init__.py  __main__.py  cli.py
examples/: README.md  backend-api.json  backend-api.nix  deploy-pair.sh  deploy.py  todo-api.nix
examples/flake-based/: flake.nix
examples/myapp/: README.md
examples/simple/: README.md  backend-api.nix  backend-response.txt  backend.py  deploy-pair.sh  flake.nix  frontend-app.nix  frontend.html  frontend.py  todo-frontend.nix
infra/: Makefile  README.md  cleanup-containers.sh  create-cgroup-service.sh  create-direct-service.sh  create-service.sh  create-skeleton-service.sh  create-volatile-service.sh  debug-service.sh  docker-alternative.nix  docker-images.nix  flake.nix  install-systemd.sh  run-container.sh  run-nspawn.sh  run.sh  simple-systemd.sh  test-infra.sh  test-shell.nix
infra/api/: __init__.py  auth.py  build-container.nix  db.py  default.nix  deploy-flake.nix  evaluate-config.nix  evaluate-project.nix  main.py  models.py  nix.py  parse-flake.nix  setup.py  shell.nix
infra/containers/: api-server.nix  postgres.nix  worker.nix
infra/host/: Caddyfile  infra-host.nix
infra/modules/: secrets.nix
ncp/: __init__.py  cli.py
